Adding toolbar question mark

--- a/cleanfreak/ui/style.css
+++ b/cleanfreak/ui/style.css
@@ -10,7 +10,7 @@ QWidget#Scroll{
     background-color: rgb(55, 55, 55);
 }
 
-QWidget#Fill{
+QWidget#Toolbar{
     background-color: rgb(45, 45, 45);
 }
 
