--- a/cleanfreak/ui/style.css
+++ b/cleanfreak/ui/style.css
@@ -1,8 +1,8 @@
-QWidget#CleanerListItem{
+QWidget#CheckerListItem{
     background-color: rgb(50, 50, 50);
 }
 
-QWidget#CleanerListItem:hover{
+QWidget#CheckerListItem:hover{
     background-color: rgb(60, 60, 60);
 }
 
@@ -14,17 +14,17 @@ QWidget#Toolbar{
     background-color: rgb(45, 45, 45);
 }
 
-QLabel#CleanerLabel{
+QLabel#CheckerLabel{
     color: rgb(200, 200, 200);
     font-size: 16px;
 }
 
-QLabel#CleanerDesc{
+QLabel#CheckerDesc{
     color: rgb(200, 200, 200);
     font-size: 10px;
 }
 
-QLabel#CleanerMessage{
+QLabel#CheckerMessage{
     background-color: rgb(35, 35, 35);
     color: rgb(135, 135, 135);
     font-size: 10px;
@@ -84,7 +84,7 @@ QPushButton#CheckButton:hover{
     background-color: rgb(75, 75, 75);
 }
 
-QPushButton#CleanButton{
+QPushButton#FixButton{
     background-color: rgb(198, 53, 34);
     color: rgb(200, 200, 200);
     font-size: 12px;
@@ -94,7 +94,7 @@ QPushButton#CleanButton{
     border-radius: 5px;
 }
 
-QPushButton#CleanButton:hover{
+QPushButton#FixButton:hover{
     background-color: rgb(208, 58, 39);
 }
 
